Prepare user and auth
