# app/Validation/Rules/User/CreateUser.php
@@ -5,21 +5,19 @@ namespace App\Validation\Rules\User;
 use App\Validation\Rules\Rule;
 use JetBrains\PhpStorm\ArrayShape;
 
-class CreateUser extends Rule
+abstract class CreateUser extends Rule
 {
     /**
      * @return array
      */
-    #[ArrayShape(['name' => "string[]", 'nickname' => "string[]", 'email' => "string[]", 'password' => "string[]"])]
     public static function rules(): array
     {
-        return array_merge(
-            [
-                'name' => ['required', 'regex:/^[a-zA-Z]+ [a-zA-Z]+$/'],
-                'password' => ['required', 'between:8,45'],
-            ],
-            ValidateUserNickname::rules(),
-            ValidateUserEmail::rules()
-        );
+        return [
+            'firstName' => ['required', 'string'],
+            'lastName' => ['required', 'string'],
+            'email' => ['required', 'email', 'unique:users', 'string'],
+            'phone' => ['required', 'digits_between:6,14', 'string'],
+            'password' => ['required', 'between:6,45', 'string'],
+        ];
     }
 }
